login styling fixes

--- a/releng/server-all/src/main/webapp/login-error.html
+++ b/releng/server-all/src/main/webapp/login-error.html
@@ -24,8 +24,8 @@
 					</div>
 					<div>
 						<form class="form-signin" name="loginForm" method="POST" action="j_security_check">
-						<input type="text" name="j_username" class="form-control" style="margin-top: 1em" placeholder="Username" required autofocus>
-						<input type="password" name="j_password" class="form-control" style="margin-top: 1em" placeholder="Password" required>
+						<input type="text" name="j_username" class="form-control" style="margin-top: 1em; padding: 1em" placeholder="Username" required autofocus>
+						<input type="password" name="j_password" class="form-control" style="margin-top: 1em; padding: 1em" placeholder="Password" required>
 						<button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top: 1em">Log in</button>
 						<hr>
 						<a href="///www.dirigible.io" target="_blank" class="pull-right need-help">Need help?</a><span class="clearfix"></span>
