--- a/releng/server-runtime/src/main/webapp/login-form.html
+++ b/releng/server-runtime/src/main/webapp/login-form.html
@@ -21,8 +21,8 @@
 				<div class=" bg-info" style="padding: 2em; border-radius: 5px">
 					<div>
 						<form class="form-signin" name="loginForm" method="POST" action="j_security_check">
-						<input type="text" name="j_username" class="form-control" style="margin-top: 1em" placeholder="Username" required autofocus>
-						<input type="password" name="j_password" class="form-control" style="margin-top: 1em" placeholder="Password" required>
+						<input type="text" name="j_username" class="form-control" style="margin-top: 1em; padding: 1em" placeholder="Username" required autofocus>
+						<input type="password" name="j_password" class="form-control" style="margin-top: 1em; padding: 1em" placeholder="Password" required>
 						<button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top: 1em">Log in</button>
 						<hr>
 						<a href="///www.dirigible.io" target="_blank" class="pull-right need-help">Need help?</a><span class="clearfix"></span>
