--- a/ide/ide-core/src/main/resources/ide/ui/tmpl/menu.html
+++ b/ide/ide-core/src/main/resources/ide/ui/tmpl/menu.html
@@ -39,6 +39,9 @@
 			  <li class="hidden-xs">
 				<a href=""><span class="fa fa-user user"></span> <span class="user" ng-bind="user.name"></span>&nbsp;</a>
 			  </li>
+			  <li class="hidden-xs">
+				<a href="/logout"><span class="fa fa-power-off"></span></a>
+			  </li>
 			</ul>
 		</div>
 	</div>
