--- a/ide/ide-orion/src/main/resources/ide-orion/editor.html
+++ b/ide/ide-orion/src/main/resources/ide-orion/editor.html
@@ -1,4 +1,14 @@
 <!doctype html>
+<!--
+  ~ Copyright (c) 2017 SAP and others.
+  ~ All rights reserved. This program and the accompanying materials
+  ~ are made available under the terms of the Eclipse Public License v1.0
+  ~ which accompanies this distribution, and is available at
+  ~ http://www.eclipse.org/legal/epl-v10.html
+  ~ Contributors:
+  ~ SAP - initial API and implementation
+  -->
+
 <html>
     <head>
 		<meta http-equiv="Content-Language" content="en-us">
@@ -132,9 +142,9 @@
 		</script>
 		
     </head>
-	<body spellcheck="false" class="orionPage">
-		<div id="embeddedEditor">
-		</div>
-	</body>
+    <body spellcheck="false" class="orionPage">
+	<div id="embeddedEditor">
+	</div>
+    </body>
 
 </html>
