--- a/releng/desktop-all/src/main/webapp/index.html
+++ b/releng/desktop-all/src/main/webapp/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
   ~ Copyright (c) 2017 SAP and others.
   ~ All rights reserved. This program and the accompanying materials
@@ -10,9 +11,34 @@
 
 <html>
 <head>
-	<script>
-		var url = window.location.toString();
-		window.location='home' + ((url.indexOf("?") !== -1) ? url.substring(url.indexOf("?")) : '');
-	</script>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Eclipse Dirigible &trade; | Anonymous Access</title>
+    
+	<!-- Twitter Bootstrap with Theme Support -->
+	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
+	
+	<link rel="shortcut icon" type="image/png" href="/services/v3/web/ide/img/favicon.png" />
+	<link rel="stylesheet" href="/services/v3/web/resources/font-dirigible/font.css">
 </head>
+    <body>
+        <div class="container" style="padding: 5em">
+			<div class="row col-sm-6 col-md-4 col-md-offset-4">
+				<h1 style="font-size: 3.5em; margin-bottom: 0.8em" align="center"><i class="logo-icon icon-dirigible">&#xe801;</i></h1>
+				<h3 class="text-center login-title" style="margin-bottom: 1em; font-size: 16px;">Anonymous Access to Eclipse Dirigible</h3>
+				<div class=" bg-info" style="padding: 2em; border-radius: 5px">
+					<div>
+						<form class="form-login" name="anonymousForm" method="POST" action="services/v3/anonymous">
+						<input type="text" name="identifier" class="form-control" style="margin-top: 1em; padding: 1em" placeholder="Nickname" required autofocus>
+						<button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top: 1em">Enter</button>
+						<hr>
+						<a href="///www.dirigible.io" target="_blank" class="pull-right need-help">Need help?</a><span class="clearfix"></span>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+    </body>
 </html>
