--- a/releng/desktop-all/src/main/webapp/home.html
+++ b/releng/desktop-all/src/main/webapp/home.html
@@ -11,8 +11,7 @@
 <html>
 <head>
 	<script>
-		var url = window.location.toString();
-		window.location='home' + ((url.indexOf("?") !== -1) ? url.substring(url.indexOf("?")) : '');
+		window.location='/home';
 	</script>
 </head>
 </html>
