favicon links fixes

--- a/ide/ide-core/src/main/resources/ide/welcome.html
+++ b/ide/ide-core/src/main/resources/ide/welcome.html
@@ -42,6 +42,8 @@
 	</style>
 	
 	<link rel="stylesheet" href="/services/v3/web/resources/font-dirigible/font.css">
+	
+	<link rel="shortcut icon" type="image/png" href="/services/v3/web/resources/images/favicon.png" />
     
   </head>
   <body class="page">
