--- a/ide/ide-repository/src/main/resources/ide-repository/index.html
+++ b/ide/ide-repository/src/main/resources/ide-repository/index.html
@@ -17,7 +17,7 @@
 
     <title>Eclipse Dirigible &trade; | Repository </title>
 
-	<link rel="shortcut icon" type="image/png" href="../ide/img/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/services/v3/web/resources/images/favicon.png" />
 	
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	
