--- a/ide/ide-core/src/main/resources/ide/index.html
+++ b/ide/ide-core/src/main/resources/ide/index.html
@@ -31,7 +31,7 @@
 	<!-- FontAwesome icon set -->
     <link type="text/css" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
-	<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="/services/v3/web/resources/images/favicon.png" />
 </head>
 
 <body ng-app="workbench" ng-controller="WorkbenchController as wb">
