--- a/ide/ide-core/src/main/resources/ide/properties.html
+++ b/ide/ide-core/src/main/resources/ide/properties.html
@@ -17,9 +17,9 @@
 
     <title>Eclipse Dirigible &trade; | Properties</title>
 
-	<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="/services/v3/web/resources/images/favicon.png" />
 	
-    	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	
 	<!-- jQuery -->
 	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
