--- a/ide/ide-database/src/main/resources/ide-database/index.html
+++ b/ide/ide-database/src/main/resources/ide-database/index.html
@@ -8,7 +8,7 @@
 	
     <title>Eclipse Dirigible &trade; | Database </title>
 
-	<link rel="shortcut icon" type="image/png" href="../ide/img/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="/services/v3/web/resources/images/favicon.png" />
 	
 	<!-- FontAwesome icon set -->
     <link type="text/css" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
