--- a/ide/ide-workspace/src/main/resources/ide-workspace/workspace.html
+++ b/ide/ide-workspace/src/main/resources/ide-workspace/workspace.html
@@ -41,9 +41,8 @@
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
 	
 	<script src="../ide/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
-	
-	<script src="workspace.js"></script>
-
+	<script src="../ide/ui/ui-layout.js"></script>
+	<script src="../ide/ui/ui-core-ng-modules.js"></script>
 </head>
 
 <body border="1px" ng-app="workspace" ng-controller="WorkspaceController as workspace">
@@ -155,6 +154,6 @@
 	      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
 	    </div>
 	</div>
-
+	<script src="workspace.js"></script>
 </body>
 </html>
