welcome page update

--- a/ide/ide-core/src/main/resources/ide/welcome.html
+++ b/ide/ide-core/src/main/resources/ide/welcome.html
@@ -11,13 +11,13 @@
 
 <html lang="en">
   <head>
-    	<meta charset="utf-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
+   	<meta charset="utf-8">
+   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+   	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    	<title>Eclipse Dirigible &trade;</title>
+   	<title>Eclipse Dirigible &trade;</title>
 
-    	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+   	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	
 	<!-- jQuery -->
 	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
@@ -49,11 +49,17 @@
   <body class="page">
 	<h1>Welcome to Eclipse Dirigible &trade;</h1><br><br><br>
 	<p style="font-size: 1.2em"><a href="http://www.dirigible.io" target=_blank>Eclipse Dirigible &trade;</a> is a Cloud Development Platform providing development tools and runtime environment. It supports full development life-cycle of on-demand applications by leveraging in-system programming models and rapid application development techniques.</p><br><br>
+	<p style="font-size: 1.2em">You can model the database schema of your web application, create server-side scripting services by using the <a href="http://www.dirigible.io/api" target=_blank>Enterprise Javascript API</a> or just design your web pages in HTML5 by using your favorite client-side framework.</p><br><br>
+	
 	<p style="font-size: 1.2em">All the source code is licensed under the <a href="https://www.eclipse.org/legal/epl-v10.html" target=_blank>Eclipse Public License - v 1.0</a> and maintained at <a href="https://github.com/eclipse/dirigible" target=_blank>GitHub</a></p><br><br><br><br>
+	
 	<div style="width: 32em">
 	<p style="font-size: 2.2em;" align=center><i class="logo-icon icon-dirigible">&#xe801;</i>&nbsp; <span style="font-family: Trebuchet MS">dirigible</span></p>
 	<p style="font-size: 1.4em; font-style: italic;" align=center>Enjoy Programming Like Never Before</p></div>
 	<br>
+	
+	<iframe src="https://www.youtube.com/embed/uh-vRTCqD1A" style="width: 560px !important; height: 315px !important; border: none" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+	
 	<script src="/services/v3/web/resources/themes/theme.js"></script>	
   </body>
  </html>
