--- a/ide/ide-workspace/src/main/resources/ide-workspace/search.html
+++ b/ide/ide-workspace/src/main/resources/ide-workspace/search.html
@@ -55,7 +55,7 @@
 				class="dropdown btn btn-default dropdown-toggle" title="Workspaces"></select>
 			
 			
-			<div class="col-lg-6">
+			<div>
 			    <div class="input-group">
 			      <input type="text" ng-model="workspace.searchTerm" class="form-control" placeholder="Search for..." onkeydown = "if (event.keyCode == 13) document.getElementById('btn-search').click()"/>
 			      <span class="input-group-btn">
