Fixed #163 - MySQL support for Persistence layer

--- a/ide/ui/ide-database/src/main/resources/ide-database/sql/result.html
+++ b/ide/ui/ide-database/src/main/resources/ide-database/sql/result.html
@@ -71,7 +71,7 @@
 
 			var messageHub = new FramesMessageHub();
 
-			$scope.database = "derby";
+			$scope.database = "local";
 			$scope.datasource = "DefaultDB";
 
 			messageHub.subscribe(function(evt) {
