--- a/releng/trial-all/src/main/webapp/index.html
+++ b/releng/trial-all/src/main/webapp/index.html
@@ -27,7 +27,7 @@
         <div class="container" style="padding: 5em">
 			<div class="row col-sm-6 col-md-4 col-md-offset-4">
 				<h1 style="font-size: 3.5em; margin-bottom: 0.8em" align="center"><i class="logo-icon icon-dirigible">&#xe801;</i></h1>
-				<h3 class="text-center login-title" style="margin-bottom: 1em; font-size: 16px;">Welcome to Eclipse Dirigible</h3>
+				<h3 class="text-center login-title" style="margin-bottom: 1em; font-size: 16px;">Anonymous Access to Eclipse Dirigible</h3>
 				<div class=" bg-info" style="padding: 2em; border-radius: 5px">
 					<div>
 						<form class="form-login" name="anonymousForm" method="POST" action="services/v3/anonymous">
@@ -40,5 +40,15 @@
 				</div>
 			</div>
 		</div>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		
+		  ga('create', 'UA-49027147-4', 'auto');
+		  ga('send', 'pageview');
+		
+		</script>
     </body>
 </html>
