additional *.schema file next to *.dsm

--- a/ide/ui/ide-schema/src/main/resources/ide-schema/modeler.html
+++ b/ide/ui/ide-schema/src/main/resources/ide-schema/modeler.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="js/model.js"></script>
 <script type="text/javascript" src="js/dialogs.js"></script>
 <script type="text/javascript" src="js/widgets.js"></script>
-<script type="text/javascript" src="js/schema.js"></script>
+<script type="text/javascript" src="js/serializer.js"></script>
 <script type="text/javascript" src="js/sql.js"></script>
 <script type="text/javascript" src="js/controller.js"></script>
 
