binary files download fixed

--- a/ide/ui/ide-preview/src/main/resources/ide-preview/preview.html
+++ b/ide/ui/ide-preview/src/main/resources/ide-preview/preview.html
@@ -15,7 +15,7 @@
 	
 	<title>Eclipse Dirigible - Preview</title>
 
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
+	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
 	
 	<!-- AngularJS -->
 	<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
