--- a/ide/ui/ide-core/src/main/resources/ide/ui/tmpl/menu.html
+++ b/ide/ui/ide-core/src/main/resources/ide/ui/tmpl/menu.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div class="container-flex">
 		<div class="navbar-header">
+			<p class="navbar-brand" style="font-family: Trebuchet MS" href="#">
+					<i class="fa fa-cloud"></i>&nbsp;Eclipse Dirigible &trade;
+ 			</p>
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
