workspace ui fixes

--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
@@ -17,7 +17,7 @@
 	
 	<script src="../ide/ui/message-hub.js"></script>
 	
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 
 	<!-- jQuery -->
