--- a/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
@@ -108,7 +108,7 @@
 	    </div>
 	    <div class="modal-body">
 	        <div class="form-group row">
-				<label class="col-xs-12 col-form-label">Do you want to Pull all the Projects in the Workspace form Git?</label>
+				<label class="col-xs-12 col-form-label">Do you want to Pull all the Projects in the Workspace from Git?</label>
 			</div>
 			<div class="form-group row">
 				<label class="col-xs-3 col-form-label">Username</label>
@@ -136,7 +136,7 @@
 	    </div>
 	    <div class="modal-body">
 	        <div class="form-group row">
-				<label class="col-xs-12 col-form-label">Do you want to Pull the selected Project form Git?</label>
+				<label class="col-xs-12 col-form-label">Do you want to Pull the selected Project from Git?</label>
 			</div>
 			<div class="form-group row">
 				<label class="col-xs-3 col-form-label">Username</label>
@@ -164,7 +164,7 @@
 	    </div>
 	    <div class="modal-body">
 	        <div class="form-group row">
-				<label class="col-xs-12 col-form-label">Do you want to Push all the Projects in the Workspace form Git?</label>
+				<label class="col-xs-12 col-form-label">Do you want to Push all the Projects in the Workspace to Git?</label>
 			</div>
 			<div class="form-group row">
 				<label class="col-xs-3 col-form-label">Message</label>
@@ -204,7 +204,7 @@
 	    </div>
 	    <div class="modal-body">
 	        <div class="form-group row">
-				<label class="col-xs-12 col-form-label">Do you want to Push the selected Project form Git?</label>
+				<label class="col-xs-12 col-form-label">Do you want to Push the selected Project to Git?</label>
 			</div>
 			<div class="form-group row">
 				<label class="col-xs-3 col-form-label">Message</label>
@@ -244,7 +244,7 @@
 	    </div>
 	    <div class="modal-body">
 	        <div class="form-group row">
-				<label class="col-xs-12 col-form-label">Do you want to Reset the selected Project form Git?</label>
+				<label class="col-xs-12 col-form-label">Do you want to Reset the selected Project from Git?</label>
 			</div>
 			<div class="form-group row">
 				<label class="col-xs-3 col-form-label">Message</label>
