[IDE] Entity editor updated

--- a/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
+++ b/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
@@ -314,7 +314,7 @@
 					<div class="row">
 						<label class="col-xs-3 col-form-label">Is Major (e.g. shown on table headers): </label>
 						<div class="col-xs-9">
-							<input class="form-control" type="checkbox" ng-model="ctrl.$scope.$parent.cell.value.isMajor" required="required" data-ng-true-value="'true'" data-ng-false-value="'false'">
+							<input class="form-control" type="checkbox" ng-model="ctrl.$scope.$parent.cell.value.widgetIsMajor" required="required" data-ng-true-value="'true'" data-ng-false-value="'false'">
 						</div>
 					</div>
 				  </div>
