database schema modeler fixes

--- a/ide/ui/ide-schema/src/main/resources/ide-schema/modeler.html
+++ b/ide/ui/ide-schema/src/main/resources/ide-schema/modeler.html
@@ -158,7 +158,7 @@
 					<div class="row">
 						<label class="col-xs-3 col-form-label">Length: </label>
 						<div class="col-xs-3">
-							<input class="form-control" type="text" placeholder="20" ng-model="ctrl.$scope.$parent.cell.value.length" required="required">
+							<input class="form-control" type="text" placeholder="20" ng-model="ctrl.$scope.$parent.cell.value.columnLength" required="required">
 						</div>
 					</div>
 					<div class="row">
