nightly push + Alice theme added

--- a/ide/ui/ide-core/src/main/resources/ide/ui/tmpl/menu.html
+++ b/ide/ui/ide-core/src/main/resources/ide/ui/tmpl/menu.html
@@ -37,8 +37,9 @@
 					<li><a href="#" data-theme="wendy" class="theme-link" ng-click="selectTheme('wendy')">Wendy</a></li>
 					<li><a href="#" data-theme="baroness" class="theme-link" ng-click="selectTheme('baroness')">Baroness</a></li>
 					<li><a href="#" data-theme="simone" class="theme-link" ng-click="selectTheme('simone')">Simone</a></li>
+					<li><a href="#" data-theme="alice" class="theme-link" ng-click="selectTheme('alice')">Alice</a></li>
 				</ul>
-			  </li>				  
+			  </li>
 			  <li class="hidden-xs">
 				<a href=""><span class="fa fa-user user"></span> <span class="user" ng-bind="user.name"></span>&nbsp;</a>
 			  </li>
