EntityName, DropDownKey, DropDownValue, defaulting relationship properties

--- a/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
+++ b/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
@@ -317,6 +317,18 @@
 							<input class="form-control" type="checkbox" ng-model="ctrl.$scope.$parent.cell.value.widgetIsMajor" required="required" data-ng-true-value="'true'" data-ng-false-value="'false'">
 						</div>
 					</div>
+					<div class="row">
+						<label class="col-xs-3 col-form-label">Drop Dwon Key: </label>
+						<div class="col-xs-9">
+							<input class="form-control" type="text" placeholder="key property" ng-model="ctrl.$scope.$parent.cell.value.widgetDropDownKey" required="required">
+						</div>
+					</div>
+					div class="row">
+						<label class="col-xs-3 col-form-label">Drop Dwon Value: </label>
+						<div class="col-xs-9">
+							<input class="form-control" type="text" placeholder="value property" ng-model="ctrl.$scope.$parent.cell.value.widgetDropDownValue" required="required">
+						</div>
+					</div>
 				  </div>
 			    </div>
 			</div>
