Fix widgetDropDownKey and widgetDropDownValue serialization

--- a/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
+++ b/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
@@ -323,7 +323,7 @@
 							<input class="form-control" type="text" placeholder="key property" ng-model="ctrl.$scope.$parent.cell.value.widgetDropDownKey" required="required">
 						</div>
 					</div>
-					div class="row">
+					<div class="row">
 						<label class="col-xs-3 col-form-label">Drop Dwon Value: </label>
 						<div class="col-xs-9">
 							<input class="form-control" type="text" placeholder="value property" ng-model="ctrl.$scope.$parent.cell.value.widgetDropDownValue" required="required">
