Florence theme added

--- a/ide/ui/ide-core/src/main/resources/ide/ui/tmpl/menu.html
+++ b/ide/ui/ide-core/src/main/resources/ide/ui/tmpl/menu.html
@@ -38,6 +38,7 @@
 					<li><a href="#" data-theme="baroness" class="theme-link" ng-click="selectTheme('baroness')">Baroness</a></li>
 					<li><a href="#" data-theme="simone" class="theme-link" ng-click="selectTheme('simone')">Simone</a></li>
 					<li><a href="#" data-theme="alice" class="theme-link" ng-click="selectTheme('alice')">Alice</a></li>
+					<li><a href="#" data-theme="florence" class="theme-link" ng-click="selectTheme('florence')">Florence</a></li>
 				</ul>
 			  </li>
 			  <li class="hidden-xs">
