colors in console changes

--- a/ide/ui/ide-console/src/main/resources/ide-console/console.html
+++ b/ide/ui/ide-console/src/main/resources/ide-console/console.html
@@ -37,8 +37,8 @@
 				
 				if (record.level === 'ERROR') color = "red";
 				else if (record.level === 'DEBUG') color = "silver";
-				else if (record.level === 'WARN') color = "yellow";
-				else if (record.level === 'TRACE') color = "white";
+				else if (record.level === 'WARN') color = "darkorange";
+				else if (record.level === 'TRACE') color = "darkgray";
 				
 				var date = new Date(record.timestamp);
 				var id = record.timestamp;
